views: don't make device chooser's client view huge

ChooserDialogView's client view does not need to be 402x320, since the
DeviceChooserContentView sizes itself. Worse, explicitly sizing the
ChooserDialogView's client view causes the dialog to double in height.

BUG=706337

Review-Url: https://codereview.chromium.org/2804303002
Cr-Commit-Position: refs/heads/master@{#463225}

Former-commit-id: 48fd59f0ef21b6daffc42147ac15bff3aefd4e67